tests/ui/attributes/malformed-no-std.stderr
error[E0565]: malformed `no_std` attribute input
  --> $DIR/malformed-no-std.rs:3:1
   |
LL | #![no_std = "foo"]
   | ^^^^^^^^^^-------^
   | |         |
   | |         didn't expect any arguments here
   | help: must be of the form: `#![no_std]`

error[E0565]: malformed `no_std` attribute input
  --> $DIR/malformed-no-std.rs:5:1
   |
LL | #![no_std("bar")]
   | ^^^^^^^^^-------^
   | |        |
   | |        didn't expect any arguments here
   | help: must be of the form: `#![no_std]`

error[E0565]: malformed `no_std` attribute input
  --> $DIR/malformed-no-std.rs:8:1
   |
LL | #![no_std(foo = "bar")]
   | ^^^^^^^^^-------------^
   | |        |
   | |        didn't expect any arguments here
   | help: must be of the form: `#![no_std]`

error[E0565]: malformed `no_core` attribute input
  --> $DIR/malformed-no-std.rs:11:1
   |
LL | #![no_core = "foo"]
   | ^^^^^^^^^^^-------^
   | |          |
   | |          didn't expect any arguments here
   | help: must be of the form: `#![no_core]`

error[E0565]: malformed `no_core` attribute input
  --> $DIR/malformed-no-std.rs:13:1
   |
LL | #![no_core("bar")]
   | ^^^^^^^^^^-------^
   | |         |
   | |         didn't expect any arguments here
   | help: must be of the form: `#![no_core]`

error[E0565]: malformed `no_core` attribute input
  --> $DIR/malformed-no-std.rs:16:1
   |
LL | #![no_core(foo = "bar")]
   | ^^^^^^^^^^-------------^
   | |         |
   | |         didn't expect any arguments here
   | help: must be of the form: `#![no_core]`

error: crate-level attribute should be an inner attribute: add an exclamation mark: `#![no_std]`
  --> $DIR/malformed-no-std.rs:21:1
   |
LL | #[no_std]
   | ^^^^^^^^^
   |
note: This attribute does not have an `!`, which means it is applied to this extern crate
  --> $DIR/malformed-no-std.rs:26:1
   |
LL | extern crate core;
   | ^^^^^^^^^^^^^^^^^^
note: the lint level is defined here
  --> $DIR/malformed-no-std.rs:20:8
   |
LL | #[deny(unused_attributes)]
   |        ^^^^^^^^^^^^^^^^^

error: crate-level attribute should be an inner attribute: add an exclamation mark: `#![no_core]`
  --> $DIR/malformed-no-std.rs:23:1
   |
LL | #[no_core]
   | ^^^^^^^^^^
   |
note: This attribute does not have an `!`, which means it is applied to this extern crate
  --> $DIR/malformed-no-std.rs:26:1
   |
LL | extern crate core;
   | ^^^^^^^^^^^^^^^^^^

warning: unused attribute
  --> $DIR/malformed-no-std.rs:5:1
   |
LL | #![no_std("bar")]
   | ^^^^^^^^^^^^^^^^^ help: remove this attribute
   |
note: attribute also specified here
  --> $DIR/malformed-no-std.rs:3:1
   |
LL | #![no_std = "foo"]
   | ^^^^^^^^^^^^^^^^^^
   = note: requested on the command line with `-W unused-attributes`

warning: unused attribute
  --> $DIR/malformed-no-std.rs:8:1
   |
LL | #![no_std(foo = "bar")]
   | ^^^^^^^^^^^^^^^^^^^^^^^ help: remove this attribute
   |
note: attribute also specified here
  --> $DIR/malformed-no-std.rs:5:1
   |
LL | #![no_std("bar")]
   | ^^^^^^^^^^^^^^^^^

warning: unused attribute
  --> $DIR/malformed-no-std.rs:13:1
   |
LL | #![no_core("bar")]
   | ^^^^^^^^^^^^^^^^^^ help: remove this attribute
   |
note: attribute also specified here
  --> $DIR/malformed-no-std.rs:11:1
   |
LL | #![no_core = "foo"]
   | ^^^^^^^^^^^^^^^^^^^

warning: unused attribute
  --> $DIR/malformed-no-std.rs:16:1
   |
LL | #![no_core(foo = "bar")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^ help: remove this attribute
   |
note: attribute also specified here
  --> $DIR/malformed-no-std.rs:13:1
   |
LL | #![no_core("bar")]
   | ^^^^^^^^^^^^^^^^^^

error: aborting due to 8 previous errors; 4 warnings emitted

For more information about this error, try `rustc --explain E0565`.
